reference: JDK_JAVA_OPTIONS and container specific options